2004-07-14  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* general.pl.in, xml.pl.in: finally made all the output utf-8, this
	  will require perl >= 5.8.0 (on older versions it will still work,
	  but the output won't be guaranteed to be utf-8), it also allows
	  backends i18n for distributions != debian (with it's annyoning
	  liblocale-gettext-perl package). Fixes also bugs #142921 and 
	  #145240

2004-07-13  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* replace.pl.in (gst_replace_line_first): add a \n after the line.
	  fixes debian bug #258551

2004-07-13  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: made it to really restart all changed interfaces when
	  applying data, not only the currently active ones. other silly stetic
	  code improvements
	* replace.pl.in: Fixed an anyonning that corrupted smb.conf when the 
	  winsserver tag was empty and didn't exist in the file

2004-07-07  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* platform.pl.in (gst_platform_get_system): added, this functionality
	  has been detached from gst_platform_guess()
	* general.pl.in: call gst_platform_get_system() in any case

2004-06-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.34

2004-06-28  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: in debian, made it to enable/disable the samba
	  service, not smb, fixes #145047

2004-06-27  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in, network.pl.in: at last, added network tool support
	  for suse 9.0 and 9.1, thanks to Satvik <satvik@students.iiit.net>
	  and Kirti <kirtisinha@students.iiit.net> for their cool work.
	* parse.pl.in (gst_parse_split_first_array_pos), (gst_parse_fq_domain):
	  added. (gst_parse_slackware_hostname): replaced by
	  (gst_parse_fq_hostname)
	* replace.pl.in (gst_replace_slackware_hostname): replaced by
	  (gst_replace_fq_hostname)

2004-06-27  Carlos Garnacho Parro  <garnacho@tuxerver.net>
