@@ -76,7 +76,8 @@ $version = "@VERSION@";
               "turbolinux-7.0", "fedora-1",
               "pld-1.0", "pld-1.1", "pld-1.99",
               "conectiva-9", "conectiva-10",
-              "slackware-9.1.0", "gentoo", "freebsd-5");
+              "slackware-9.1.0", "slackware-10.0.0",
+              "gentoo", "freebsd-5");
 
 $description =<<"end_of_description;";
        Configures all network parameters and interfaces.
